# brainfucks

./: README.md
ANTLR_TermRewrite/: .project
ANTLR_TermRewrite/src/org/ledyba/bf/parser/: Brainfuck.tokens  BrainfuckBaseListener.java  BrainfuckListener.java  BrainfuckParser.java
C_Interpreter/: .cproject  .project
C_Interpreter/src/: ast.c  ast.h  main.c  mem.c  mem.h  middle.c  middle.h  vector.c  vm.c  vm.h  vm_create.c  vm_exec.c
C_Interpreter_ALESS/src/: ast.c
Gauche_Interpreter/: echo2.bf  hello.bf  loop.scm
Go_Interpreter/: bf.go
JS_WebInterpreter/: brainfuck.js  index.html
Java_Interpreter/: .project
Java_Interpreter/samples/: Hello.asm  Hello.java
Ocaml_Interpreter/: bf.ml
Prolog_Interpreter/: brainfuck.pro
Ruby_Interpreter/: mandelbrot.time.txt
antlr/: Brainfuck.txt
antlr/src/org/ledyba/bf/parser/: Brainfuck.g4  (+1 more)
antlr/term_rewrite/: .classpath
c/: .checkstyle  mandelbrot.time.txt
c/interpreter/: makefile
c/interpreter/src/: vm.c
c/src/: ast.c  ast.h  vector.c  vector.h  vm.h
d/: .gitignore  dub.json
d/source/: app.d  bf.d
elixir/: mix.exs
elixir/lib/: brainfuck.ex
elixir/test/: brainfuck_test.exs
gauche/interpreter/: brainfuck.scm
go/interpreter/: bf.go
haskell/: .project
haskell/interpreter/: brainfuck.cabal
haskell/interpreter/src/: Main.hs
haskell/src/: Brainfuck.hs
js/: .project
js/interpreter_web/: style.css
ocaml/interpreter/: bf.ml
ruby/: brainfuck.rb
rust/: .gitignore  Cargo.toml
rust/src/: main.rs
rust/src/bf/: bf.rs  mod.rs
samples/: ascii.bf  hello.bf  quine.bf  quine2.bf
(+2 files in other folders)
