name:           brainfuck
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         psi

executable brainfuck
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   mtl,
                   array
  ghc-options:     -Wall
  other-modules:   Brainfuck

